fix: change Aurora background z-index to -1

--- a/css/Aurora.css
+++ b/css/Aurora.css
@@ -12,7 +12,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: -2;
+  z-index: -1;
   background-color: var(--bg-primary); /* Base page dark background color */
   pointer-events: none;
   overflow: hidden;
